--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "node-int64": "^0.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
