--- a/package.json
+++ b/package.json
@@ -32,9 +32,15 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^3.2.0",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "node-int64": "^0.4.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "popper.js": "^1.14.4",
+    "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.5.2",
+    "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
