--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@material/textfield": "^0.40.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "material": "^0.3.0",
     "node-int64": "^0.4.0",
     "popper.js": "^1.14.4",
     "react": "^16.5.2",
