--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material/textfield": "^0.40.0",
-    "bootstrap": "^4.1.3",
+    "babili-webpack-plugin": "^0.1.2",
+    "electron-packager": "^12.2.0",
     "jquery": "^3.3.1",
     "material": "^0.3.0",
     "node-int64": "^0.4.0",
