tried some nodes

--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "@material/textfield": "^0.40.0",
     "babili-webpack-plugin": "^0.1.2",
     "electron-packager": "^12.2.0",
+    "fse": "^4.0.1",
     "jquery": "^3.3.1",
     "material": "^0.3.0",
+    "node-gyp": "^3.8.0",
     "node-int64": "^0.4.0",
+    "popper": "^1.0.1",
     "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
