--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "electron": "~1.7.8",
